tests/invalid/Void_Invalid_3.whiley
method method() -> void:
    b = 1

method main() -> void:
    a = method()
